# funny-world-generator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
funny_word_generator/: __init__.py  cli.py  generator.py  phonetics.py  scorer.py
tests/: test_generator.py  test_scorer.py
