[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "funny-word-generator"
version = "0.1.0"
description = "Генератор смешных и нелепых слов с оценкой 'забавности'"
authors = [{name = "Eiztrips"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
]

[project.scripts]
funny-words = "funny_word_generator.cli:main"

[tool.setuptools.packages.find]
include = ["funny_word_generator*"]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = [
    "^build/",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "N"]
